@@ -1,1 +1,2 @@
-#debian/man/scan*.1
+build-llvm/tools/clang/docs/tools/clang-3.3.1
+clang/tools/scan-build/scan-build.1
