@@ -2,20 +2,20 @@ usr/lib/llvm-3.3/lib/libLLVM*.a
 usr/lib/llvm-3.3/lib/libllvm*.a
 usr/lib/llvm-3.3/lib/LLVM*.so
 usr/lib/llvm-3.3/lib/libLTO.*
-usr/lib/llvm-3.3/include/llvm/	usr/include/llvm-3.3/
+usr/lib/llvm-3.3/include/llvm/      usr/include/llvm-3.3/
 usr/lib/llvm-3.3/include/llvm-c/	usr/include/llvm-c-3.3/
+cmake/modules/*.cmake               usr/share/llvm-3.3/cmake/
 
 build-llvm/Makefile.common		/usr/lib/llvm-3.3/build/
 build-llvm/Makefile.config		/usr/lib/llvm-3.3/build/
 build-llvm/config.status		/usr/lib/llvm-3.3/build/
-Makefile.rules			/usr/lib/llvm-3.3/build/
-configure			/usr/lib/llvm-3.3/build/
-autoconf/			/usr/lib/llvm-3.3/build/
+Makefile.rules			        /usr/lib/llvm-3.3/build/
+configure			            /usr/lib/llvm-3.3/build/
+autoconf/			            /usr/lib/llvm-3.3/build/
 
-utils/vim/llvm.vim		usr/share/vim/addons/syntax/llvm-3.3.vim
-utils/vim/tablegen.vim		usr/share/vim/addons/syntax/tablegen-3.3.vim
+utils/vim/llvm.vim		        usr/share/vim/addons/syntax/llvm-3.3.vim
+utils/vim/tablegen.vim		    usr/share/vim/addons/syntax/tablegen-3.3.vim
 
-utils/emacs/emacs.el		usr/share/emacs/site-lisp/llvm-3.3/
-utils/emacs/llvm-mode.el	usr/share/emacs/site-lisp/llvm-3.3/
+utils/emacs/emacs.el		    usr/share/emacs/site-lisp/llvm-3.3/
+utils/emacs/llvm-mode.el	    usr/share/emacs/site-lisp/llvm-3.3/
 utils/emacs/tablegen-mode.el	usr/share/emacs/site-lisp/llvm-3.3/
-
