@@ -1,12 +1,18 @@
 llvm-toolchain (1:3.3~svn176083-1~exp1) experimental; urgency=low
 
   * Draft of a snapshot release (3.3)
+  * Enable r600 experimental backend
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 26 Feb 2013 13:49:57 +0100
 
 llvm-toolchain-3.2 (1:3.2repack-1~exp3) UNRELEASED; urgency=low
 
+  * Remove package "clang". It is now provided by llvm-defaults.
   * Fix some issues relative to the epoch change
+  * Fix a wrong path in the _lldb.so Python symlink
+  * Install cmake files to build LLVM extensions (Closes: #701153)
+  * Remove the embedded copy of libjs-jquery (Closes: #701087)
+  * Fix the install of lli manpage (Closes: #697117)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 17 Feb 2013 12:05:15 +0100
 
@@ -38,6 +44,5 @@ llvm-toolchain-3.2 (3.2repack-1~exp1) experimental; urgency=low
   * Add a script pollycc which will call clang with the right arguments.
   * Use __builtin___clear_cache on ARM to fix a clang bug.
     Thanks to Matthias Klose.
-  * Enable the r600 experimental backend for mesa 9.1.
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 09 Feb 2013 12:14:10 +0100
